--- a/projekt/hlstranka.html
+++ b/projekt/hlstranka.html
@@ -20,9 +20,11 @@
       display: flex;
       align-items: center;
       padding: 10px 20px;
-      background-color: #2e2d2a;
-      border-bottom: 2px solid #D8BFFF;
-      backdrop-filter: blur(10px);
+      border-bottom: 2px solid #c30e23;
+      background: rgba(46, 45, 42, 0.51);
+      box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+      backdrop-filter: blur(5.4px);
+      -webkit-backdrop-filter: blur(5.4px);
       box-sizing: border-box;
       z-index: 1000;
     }
@@ -60,10 +62,12 @@
       text-align: center;
       padding: 40px 20px;
       margin-top: 100px;
-      background-color: #2e2d2a;
       border-radius: 30px;
-      border: 2px solid #D8BFFF;
-      backdrop-filter: blur(10px);
+      border: 2px solid #c30e22;
+      background: rgba(46, 45, 42, 0.51);
+      box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+      backdrop-filter: blur(5.4px);
+      -webkit-backdrop-filter: blur(5.4px);
       max-width: 60%;
       margin-left: auto;
       margin-right: auto;
@@ -106,7 +110,7 @@
       position: absolute;
       right: 0;
       background-color: #2e2d2a;
-      border: 2px solid #D8BFFF;
+      border: 2px solid #c30e22;
       border-radius: 12px;
       min-width: 160px;
       box-shadow: 0 8px 16px rgba(0,0,0,0.3);
